Add page footer markup and styles

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
   </head>
 
   <body>
-    <header class="page-header" data-scroll-header>
+    <!-- TODO: добавить data-scroll-header для scrollspy -->
+    <header class="page-header">
       <div class="container">
         <nav class="page-header__nav">
           <a href="/" class="site-logo">Global <span>Money</span></a>
@@ -26,5 +27,19 @@
         </nav>
       </div>
     </header>
+
+    <footer class="page-footer">
+      <p class="copyright">
+        Copyright © 2019
+        <a
+          class="copyright__link"
+          href="https://github.com/luxplanjay"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          Luxplanjay
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
