Add base section styling

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,14 @@
       </div>
     </header>
 
+    <main>
+      <section class="section">
+        <div class="container">
+          <h2 class="section__title">Section title</h2>
+        </div>
+      </section>
+    </main>
+
     <footer class="page-footer">
       <p class="copyright">
         Copyright © 2019
