Add list styling

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,14 @@
       <section class="section">
         <div class="container">
           <h2 class="section__title">Section title</h2>
+
+          <ul class="list">
+            <li class="list__item"></li>
+            <li class="list__item"></li>
+            <li class="list__item"></li>
+            <li class="list__item"></li>
+            <li class="list__item"></li>
+          </ul>
         </div>
       </section>
     </main>
