Test content amount

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,11 @@
     <header class="page-header">
       <div class="container">
         <nav class="page-header__nav">
-          <a href="/" class="site-logo">Global <span>Money</span></a>
+          <!-- <span href="/" class="site-logo">Global <span>Money</span></a> -->
+
+          <a href="/" class="site-logo">
+            <img src="./images/logo.jpg" alt="global money logo" width="60" />
+          </a>
 
           <div class="page-nav">
             <a href="#section-1" class="page-nav__link">Section 1</a>
@@ -31,14 +35,64 @@
     <main>
       <section class="section">
         <div class="container">
-          <h2 class="section__title">Section title</h2>
+          <h2 class="section__title">Чому обирають GLOBAL MONEY?</h2>
 
-          <ul class="list">
+          <ul>
+            <li>75000 місць приймання платежів</li>
+            <li>
+              кожна операція захищена сучасними технологіями шифрування, зокрема
+              3d Secure
+            </li>
+            <li>
+              служба моніторингу шахрайських операцій активна 24 години на добу
+            </li>
+            <li>
+              переказ грошових коштів у національнй валюті без відкриття рахунку
+            </li>
+            <li>механізм захисту прав Клієнтів</li>
+          </ul>
+
+          <!-- <ul class="list">
             <li class="list__item"></li>
             <li class="list__item"></li>
             <li class="list__item"></li>
             <li class="list__item"></li>
             <li class="list__item"></li>
+            <li class="list__item"></li>
+          </ul> -->
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container">
+          <h2 class="section__title">Чому це ЗРУЧНО для ФРІЛАНСЕРІВ?</h2>
+
+          <ul>
+            <li>
+              оплата по факту (замовник оплачує роботу на рахунок електронного
+              гаманця, виконавець отримує кошти по завершенню)
+            </li>
+            <li>робота з гарантією</li>
+            <li>виведення коштів з гаманця у будь-якій точці світу</li>
+            <li>
+              конфіденційність власної карти (розрахунок проводиться через
+              електронний гаманець)
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container">
+          <h2 class="section__title">Xому це КОРИСНО для ЗАМОВНИКІВ?</h2>
+
+          <ul>
+            <li>
+              поповнення гаманця виконавця будь-яким зручним способом (картка,
+              термінал, гаманець)
+            </li>
+            <li>робота з гарантією</li>
+            <li>безкоштовний супровід клієнтів</li>
           </ul>
         </div>
       </section>
