Add baner with hero and team section

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,88 +13,99 @@
 
   <body>
     <!-- TODO: добавить data-scroll-header для scrollspy -->
-    <header class="page-header">
+    <!-- <header class="page-header">
       <div class="container">
         <nav class="page-header__nav">
-          <!-- <span href="/" class="site-logo">Global <span>Money</span></a> -->
-
           <a href="/" class="site-logo">
             <img src="./images/logo.jpg" alt="global money logo" width="60" />
           </a>
-
-          <div class="page-nav">
-            <a href="#section-1" class="page-nav__link">Section 1</a>
-            <a href="#section-2" class="page-nav__link">Section 2</a>
-            <a href="#section-3" class="page-nav__link">Section 3</a>
-            <a href="#section-4" class="page-nav__link">Section 4</a>
-          </div>
         </nav>
       </div>
-    </header>
+    </header> -->
+
+    <div class="baner">
+      <div class="container">
+        <section class="hero">
+          <h1 class="hero__title">
+            Global Money - це про електронні гроші та зручну роботу. <br />Без
+            зайвих відсотків
+          </h1>
+          <a
+            class="hero__link"
+            href="https://globalmoney.ua"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Дізнайся більше</a
+          >
+        </section>
+      </div>
+    </div>
 
     <main>
       <section class="section">
         <div class="container">
-          <h2 class="section__title">Чому обирають GLOBAL MONEY?</h2>
+          <h2 class="section__title">Наша команда</h2>
 
-          <ul>
-            <li>75000 місць приймання платежів</li>
-            <li>
-              кожна операція захищена сучасними технологіями шифрування, зокрема
-              3d Secure
+          <ul class="team">
+            <li class="team__item team-member">
+              <img
+                src="./images/team/team-1.jpg"
+                alt=""
+                width="320"
+                class="team-member__photo"
+              />
+              <h3 class="team-member__name">Вікторія Подчерняєва</h3>
+              <p class="team-member__occupation">Менеджер проекту</p>
+              <a
+                href="mailto:podchernyaeva.viktoria@gmail.com"
+                class="team-member__email"
+                >podchernyaeva.viktoria@gmail.com</a
+              >
             </li>
-            <li>
-              служба моніторингу шахрайських операцій активна 24 години на добу
+            <li class="team__item team-member">
+              <img
+                src="./images/team/team-2.jpg"
+                alt=""
+                width="320"
+                class="team-member__photo"
+              />
+              <h3 class="team-member__name">Валерія Павлюк</h3>
+              <p class="team-member__occupation">Виконавець проекту</p>
+              <a
+                href="mailto:valeriepavlyuk@gmail.com"
+                class="team-member__email"
+                >valeriepavlyuk@gmail.com</a
+              >
             </li>
-            <li>
-              переказ грошових коштів у національнй валюті без відкриття рахунку
+            <li class="team__item team-member">
+              <img
+                src="./images/team/team-3.jpeg"
+                alt=""
+                width="320"
+                class="team-member__photo"
+              />
+              <h3 class="team-member__name">Анастасія Слуцька</h3>
+              <p class="team-member__occupation">Виконавець проекту</p>
+              <a
+                href="mailto:anastasiiaslutska@gmail.com"
+                class="team-member__email"
+                >anastasiiaslutska@gmail.com</a
+              >
             </li>
-            <li>механізм захисту прав Клієнтів</li>
-          </ul>
-
-          <!-- <ul class="list">
-            <li class="list__item"></li>
-            <li class="list__item"></li>
-            <li class="list__item"></li>
-            <li class="list__item"></li>
-            <li class="list__item"></li>
-            <li class="list__item"></li>
-          </ul> -->
-        </div>
-      </section>
-
-      <section class="section">
-        <div class="container">
-          <h2 class="section__title">Чому це ЗРУЧНО для ФРІЛАНСЕРІВ?</h2>
-
-          <ul>
-            <li>
-              оплата по факту (замовник оплачує роботу на рахунок електронного
-              гаманця, виконавець отримує кошти по завершенню)
-            </li>
-            <li>робота з гарантією</li>
-            <li>виведення коштів з гаманця у будь-якій точці світу</li>
-            <li>
-              конфіденційність власної карти (розрахунок проводиться через
-              електронний гаманець)
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="section">
-        <div class="container">
-          <h2 class="section__title">Xому це КОРИСНО для ЗАМОВНИКІВ?</h2>
-
-          <ul>
-            <li>
-              поповнення гаманця виконавця будь-яким зручним способом (картка,
-              термінал, гаманець)
-            </li>
-            <li>робота з гарантією</li>
-            <li>безкоштовний супровід клієнтів</li>
           </ul>
         </div>
+
+        <!--
+      FB: https://www.facebook.com/profile.php?id=100009241656025
+      E-mail: podchernyaeva.viktoria@gmail.com
+
+      Валерія Павлюк - виконавець проекту
+      FB: https://www.facebook.com/valeriepavlyuk
+      E-mail: valeriepavlyuk@gmail.com
+
+      Анастасія Слуцька - виконавець проекту
+      FB: https://www.facebook.com/AnastasiiSlutskA
+      E-mail: anastasiiaslutska@gmail.com -->
       </section>
     </main>
 
