Add bigger fonts on mobile and desktop

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Global Money</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap&subset=cyrillic"
       rel="stylesheet"
     />
   </head>
@@ -16,7 +16,7 @@
       <div class="container">
         <section class="hero">
           <h1 class="hero__title">
-            Global Money - це про електронні гроші та зручну роботу. <br />Без
+            GlobalMoney - це про електронні гроші та зручну роботу. <br />Без
             зайвих відсотків.
           </h1>
           <a
@@ -58,17 +58,17 @@
             <li class="feature-list__item">
               <h3>Можливості</h3>
               <p>
-                Платіжна система «ГлобалМані» надає широкі можливості по оплаті
-                онлайн будь-яких рахунків, квитанцій, товарів і послуг
+                Платіжна система GlobalMoney надає широкі можливості з оплати
+                онлайн будь-яких рахунків, квитанцій, товарів і послуг.
               </p>
             </li>
 
             <li class="feature-list__item">
               <h3>Партнери</h3>
               <p>
-                Нашими партнерами є найбільші компанії в самих різних сферах
+                Нашими партнерами є найбільші компанії в різних сферах
                 діяльності - українські та міжнародні, державні та приватні,
-                банки і фінансові компанії та ін.
+                установи і фінансові компанії.
               </p>
             </li>
 
@@ -76,7 +76,7 @@
               <h3>Без комісій</h3>
               <p>
                 Ми також пропонуємо здійснювати грошові перекази всередині
-                системи - між електронними гаманцями користувачів - без комісій.
+                системи - між електронними гаманцями користувачів. Без комісій.
               </p>
             </li>
 
@@ -84,7 +84,7 @@
               <h3>Зручність</h3>
               <p>
                 Сервіс дозволяє сплачувати товари в інтернет-магазинах,
-                проводити зворотний обмін електронних грошей і безліч інших
+                проводити зворотний обмін електронними грошима і безліч інших
                 операцій - як в онлайні, так і в офлайні.
               </p>
             </li>
@@ -94,11 +94,11 @@
 
       <section class="section">
         <div class="container">
-          <h2 class="section__title">Title</h2>
+          <!-- <h2 class="section__title">Title</h2> -->
 
           <div class="advantages">
             <section class="advantages__entry">
-              <h3 class="advantages__title">Для фрилансеров</h3>
+              <h3 class="advantages__title">Для фрілансерів</h3>
               <ul class="advantages__list">
                 <li>
                   Оплата по факту (замовник оплачує роботу на рахунок
@@ -115,7 +115,7 @@
             </section>
 
             <section class="advantages__entry">
-              <h3 class="advantages__title">Для заказчиков</h3>
+              <h3 class="advantages__title">Для замовників</h3>
               <ul class="advantages__list">
                 <li>
                   Поповнення гаманця виконавця будь-яким зручним способом
@@ -203,19 +203,15 @@
 
     <footer class="page-footer">
       <p class="copyright">
-        Copyright © 2019
-        <a href="/" class="site-logo">
-          <img src="./images/logo.jpg" alt="global money logo" width="80" />
-        </a>
-        Created by
+        Copyright © 2019 GlobalMoney. Created by
         <a
           class="copyright__link"
           href="https://github.com/luxplanjay"
           target="_blank"
           rel="noreferrer noopener"
         >
-          Luxplanjay </a
-        >.
+          Luxplanjay
+        </a>
       </p>
     </footer>
   </body>
