Add aoc animations

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <main>
-      <section class="section" id="features">
+      <section class="section" id="features" data-aos="fade-up">
         <div class="container">
           <h2 class="section__title">Переваги сервісу</h2>
 
@@ -89,15 +89,9 @@
               </p>
             </li>
           </ul>
-        </div>
-      </section>
 
-      <section class="section">
-        <div class="container">
-          <!-- <h2 class="section__title">Title</h2> -->
-
-          <div class="advantages">
-            <section class="advantages__entry">
+          <div class="advantages" data-aos="fade-up">
+            <section class="advantages__entry" data-aos="zoom-in">
               <h3 class="advantages__title">Для фрілансерів</h3>
               <ul class="advantages__list">
                 <li>
@@ -114,7 +108,7 @@
               </ul>
             </section>
 
-            <section class="advantages__entry">
+            <section class="advantages__entry" data-aos="zoom-in">
               <h3 class="advantages__title">Для замовників</h3>
               <ul class="advantages__list">
                 <li>
@@ -134,7 +128,7 @@
         </div>
       </section>
 
-      <section class="section" id="team">
+      <section class="section" id="team" data-aos="fade-up">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
 
