Fix footer size on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,8 @@
 
     <footer class="page-footer">
       <p class="copyright">
-        Copyright © 2019 GlobalMoney. Created by
+        Copyright © 2019 GlobalMoney. <br />
+        Created by
         <a
           class="copyright__link"
           href="https://github.com/luxplanjay"
