--- a/src/index.html
+++ b/src/index.html
@@ -140,13 +140,15 @@
                 width="320"
                 class="team-member__photo"
               />
-              <h3 class="team-member__name">Вікторія Подчерняєва</h3>
-              <p class="team-member__occupation">Менеджер проекту</p>
-              <a
-                href="mailto:podchernyaeva.viktoria@gmail.com"
-                class="team-member__email"
-                >podchernyaeva.viktoria@gmail.com</a
-              >
+              <div class="team-member__content">
+                <h3 class="team-member__name">Вікторія Подчерняєва</h3>
+                <p class="team-member__occupation">Менеджер проекту</p>
+                <a
+                  href="mailto:podchernyaeva.viktoria@gmail.com"
+                  class="team-member__email"
+                  >podchernyaeva.viktoria@gmail.com</a
+                >
+              </div>
             </li>
             <li class="team__item team-member">
               <img
@@ -155,13 +157,15 @@
                 width="320"
                 class="team-member__photo"
               />
-              <h3 class="team-member__name">Валерія Павлюк</h3>
-              <p class="team-member__occupation">Виконавець проекту</p>
-              <a
-                href="mailto:valeriepavlyuk@gmail.com"
-                class="team-member__email"
-                >valeriepavlyuk@gmail.com</a
-              >
+              <div class="team-member__content">
+                <h3 class="team-member__name">Валерія Павлюк</h3>
+                <p class="team-member__occupation">Виконавець проекту</p>
+                <a
+                  href="mailto:valeriepavlyuk@gmail.com"
+                  class="team-member__email"
+                  >valeriepavlyuk@gmail.com</a
+                >
+              </div>
             </li>
             <li class="team__item team-member">
               <img
@@ -170,13 +174,15 @@
                 width="320"
                 class="team-member__photo"
               />
-              <h3 class="team-member__name">Анастасія Слуцька</h3>
-              <p class="team-member__occupation">Виконавець проекту</p>
-              <a
-                href="mailto:anastasiiaslutska@gmail.com"
-                class="team-member__email"
-                >anastasiiaslutska@gmail.com</a
-              >
+              <div class="team-member__content">
+                <h3 class="team-member__name">Анастасія Слуцька</h3>
+                <p class="team-member__occupation">Виконавець проекту</p>
+                <a
+                  href="mailto:anastasiiaslutska@gmail.com"
+                  class="team-member__email"
+                  >anastasiiaslutska@gmail.com</a
+                >
+              </div>
             </li>
           </ul>
         </div>
