Fix adaptive layout

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Global Money</title>
+    <title>GlobalMoney</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap&subset=cyrillic"
       rel="stylesheet"
@@ -12,8 +12,8 @@
   </head>
 
   <body>
-    <div class="baner">
-      <div class="container">
+    <main>
+      <div class="banner">
         <section class="hero">
           <h1 class="hero__title">
             GlobalMoney - це про електронні гроші та зручну роботу. <br />Без
@@ -30,9 +30,7 @@
 
         <a href="#features" class="next-link"></a>
       </div>
-    </div>
 
-    <main>
       <section class="section" id="features" data-aos="fade-up">
         <div class="container">
           <h2 class="section__title">Переваги сервісу</h2>
@@ -90,7 +88,7 @@
             </li>
           </ul>
 
-          <div class="advantages" data-aos="fade-up">
+          <div class="advantages">
             <section class="advantages__entry" data-aos="zoom-in">
               <h3 class="advantages__title">Для фрілансерів</h3>
               <ul class="advantages__list">
@@ -169,7 +167,7 @@
             </li>
             <li class="team__item team-member">
               <img
-                src="./images/team/team-3.jpeg"
+                src="./images/team/team-3.jpg"
                 alt=""
                 width="320"
                 class="team-member__photo"
@@ -186,32 +184,20 @@
             </li>
           </ul>
         </div>
-
-        <!--
-      FB: https://www.facebook.com/profile.php?id=100009241656025
-      E-mail: podchernyaeva.viktoria@gmail.com
-
-      Валерія Павлюк - виконавець проекту
-      FB: https://www.facebook.com/valeriepavlyuk
-      E-mail: valeriepavlyuk@gmail.com
-
-      Анастасія Слуцька - виконавець проекту
-      FB: https://www.facebook.com/AnastasiiSlutskA
-      E-mail: anastasiiaslutska@gmail.com -->
       </section>
     </main>
 
     <footer class="page-footer">
       <p class="copyright">
-        Copyright © 2019 GlobalMoney. <br />
-        Created by
+        Copyright © 2019 GlobalMoney <br />
+        Created with ❤️ by
         <a
           class="copyright__link"
           href="https://github.com/luxplanjay"
           target="_blank"
           rel="noreferrer noopener"
         >
-          Luxplanjay
+          LPJ
         </a>
       </p>
     </footer>
